force-app/main/default/objects/HelpFilterCriterion__c/HelpFilterCriterion__c.object-meta.xml
<CustomObject>
    <description>A criterion definition for filtering records of various types</description>
    <label>Help Filter Criterion</label>
    <nameField>
        <label>Help Filter Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Filter Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>