force-app/main/default/objects/HelpFilterCriterion__c/fields/CriterionNumber__c.field-meta.xml
<CustomField>
    <fullName>CriterionNumber__c</fullName>
    <description>Reference number for this Filtering instruction for use in Filter Logic</description>
    <inlineHelpText>Reference number for this Filtering instruction for use in Filter Logic</inlineHelpText>
    <label>Criterion Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>