force-app/main/default/objects/HelpFilterCriterion__c/fields/FilteredField__c.field-meta.xml
<CustomField>
    <fullName>FilteredField__c</fullName>
    <description>The API name of the Field being filtered</description>
    <inlineHelpText>The API name of the Field being filtered</inlineHelpText>
    <label>Filtered Field</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>