force-app/main/default/objects/HelpFilterCriterion__c/fields/FilteredFieldType__c.field-meta.xml
<CustomField>
    <fullName>FilteredFieldType__c</fullName>
    <description>This field is deprecated and not in use: data type is derived dynamically from the selected filter field where required</description>
    <inlineHelpText>This field is deprecated and not in use: data type is derived dynamically from the selected filter field where required</inlineHelpText>
    <label>Filtered Field Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>