force-app/main/default/objects/HelpFilterCriterion__c/fields/FilterValue__c.field-meta.xml
<CustomField>
    <fullName>FilterValue__c</fullName>
    <description>The value defining this Filter</description>
    <inlineHelpText>The value defining this Filter</inlineHelpText>
    <label>Filter Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>