force-app/main/default/objects/HelpFilterCriterion__c/fields/HelpFilter__c.field-meta.xml
<CustomField>
    <fullName>HelpFilter__c</fullName>
    <description>The Filter to which this Criterion belongs</description>
    <inlineHelpText>The Filter to which this Criterion belongs</inlineHelpText>
    <label>Help Filter</label>
    <referenceTo>HelpFilter__c</referenceTo>
    <relationshipLabel>Help Filter Criteria</relationshipLabel>
    <relationshipName>HelpFilterCriteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>