force-app/main/default/objects/HelpFilterCriterion__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Logical operator that defines this filter</description>
    <inlineHelpText>Logical operator that defines this filter</inlineHelpText>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>!=</fullName>
                <default>true</default>
                <label>!=</label>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>LIKE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>